--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-* Copyright (c) 2006, The Android Open Source Project
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*     http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
-*/
--->
 <resources>
-    <dimen name="rounded_corner_content_padding">10.0dip</dimen>
+    <dimen name="rounded_corner_content_padding">0.0dip</dimen>
     <dimen name="rounded_corner_radius">0.0dip</dimen>
     <dimen name="rounded_corner_radius_bottom">0.0dip</dimen>
     <dimen name="rounded_corner_radius_top">0.0dip</dimen>
-    <dimen name="status_bar_padding_end">10.0dip</dimen>
-    <dimen name="status_bar_padding_start">10.0dip</dimen>
+    <dimen name="status_bar_airplane_spacer_width">4.0dip</dimen>
+    <dimen name="status_bar_clock_end_padding">0.0dip</dimen>
+    <dimen name="status_bar_clock_size">14.0sp</dimen>
+    <dimen name="status_bar_clock_starting_padding">7.0dip</dimen>
+    <dimen name="status_bar_connected_device_bt_indicator_size">17.0dip</dimen>
+    <dimen name="status_bar_connected_device_signal_margin_end">16.0dip</dimen>
+    <dimen name="status_bar_header_height_expanded">124.0dip</dimen>
+    <dimen name="status_bar_header_height_keyguard">40.0dip</dimen>
+    <dimen name="status_bar_header_padding_bottom">48.0dip</dimen>
+    <dimen name="status_bar_icon_drawing_size">15.0dip</dimen>
+    <dimen name="status_bar_icon_padding">0.0dip</dimen>
+    <item type="dimen" name="status_bar_icon_scale_factor">1.0</item>
+    <dimen name="status_bar_left_clock_end_padding">7.0dip</dimen>
+    <dimen name="status_bar_left_clock_starting_padding">0.0dip</dimen>
+    <dimen name="status_bar_padding_end">20.0dip</dimen>
+    <dimen name="status_bar_padding_start">20.0dip</dimen>
 </resources>
