--- a/overlay/frameworks/base/packages/SystemUI/res/values-sw372dp/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values-sw372dp/dimens.xml
@@ -1,7 +1,6 @@
 -->
 <resources>	<resources>
-    <dimen name="rounded_corner_radius">3dp</dimen>		<dimen name="rounded_corner_radius">4dp</dimen>
-    <dimen name="rounded_corner_content_padding">9dp</dimen>		<dimen name="rounded_corner_content_padding">6dp</dimen>
-    <dimen name="rounded_statusbar_extra_padding">5dp</dimen>	
+    <dimen name="rounded_corner_radius">4dp</dimen>
+    <dimen name="rounded_corner_content_padding">6dp</dimen>	
 
 </resources>	</resources>
